# tree-sitter-al

./: .gitignore  .goosehints  ARCHITECTURE_DESIGN.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CONFLICTRES.md  CONFLICT_ANALYSIS.md  CONTEXTUAL_PROPERTY_IMPLEMENTATION.md  CONVENTIONS.md  Cargo.toml  CodeunitExample.al  DELIVERABLES.md  FILTER_PROPERTIES_CATALOG.md  FINAL_RECOMMENDATIONS.md  FINAL_SUMMARY.md  FINDINGS.md  GEMINI.md  IMPLEMENTATION_SPEC.md  INDENTATION_PROJECT_STATUS.md  Implementation_Plan.md  KNOWN_ISSUES.md  KNOWN_LIMITATIONS.md  LICENSE  MERGE.md  MIGRATIONPLAN.md  MIGRATION_COMPLETE.md  MIGRATION_GUIDE.md  MISSING.md  Makefile  PHASE4_UNSUPPORTED_PATTERNS.md  PHASE6_STATUS.md  PROPERTY.md  PROPERTYPLAN.md  PROPERTY_GUIDE.md  Package.swift  PageExample.al  QUERIES.md  README.md  REFACTOR_COMPLETE.md  (+64 more)
.claude/commands/: addsupport.md  currentteststate.md  iterate.md  updatestate.md
.claude/rules/: attributes.md  contextual-keywords.md  debugging.md  scanner.md  test-failures.md
.clinerules/: CONVENTIONS.md  TREERULES.md
.github/workflows/: build-shim.yml  build-wasm.yml  publish-npm.yml  publish-pypi.yml
al_testfiles/: parsed.txt
bak/: grammar.js_bak  grammar.js_bak2
bindings/c/: .gitignore  al_shim.c  al_shim.h  al_shim.map  al_shim_exports.txt  build.ps1  build.sh  smoke-test.ts  tree-sitter-al.h  tree-sitter-al.pc.in  verify-deps.sh  verify-exports.sh
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc
bindings/python/tree_sitter_al/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
developer/properties/: devenv-abouttitleml-property.md  devenv-sourcetableview-xmlports-property.md
docs/: dangling-else-fix.md  database-reference-numeric-id-fix.md  v2-blog-post-notes.md  var-attribute-fix.md
docs/indentation/: FINAL_RESULTS.md
docs/superpowers/plans/: 2026-03-20-consolidate-properties.md  2026-03-20-v2-phase1-scaffold.md  (+4 more)
queries/: bad_delete.scm  folds.scm  highlights.scm  indents.scm  locals.scm  tags.scm  textobjects.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
test/: INDENT_TEST_RESULTS.md  codeunit_comprehensive.txt
test/corpus/: EmptyCodeblock.txt  about_properties_in_fields.txt  access_by_permission_all_object_types_test.txt  access_by_permission_case_variations_test.txt  access_by_permission_property_test.txt  access_by_permission_system_objects_test.txt  action_group_preprocessor_test.txt  action_groups_and_shortcut_keys.txt  action_image_case_insensitive_test.txt  action_types.txt  additional_search_terms_locked.txt  additional_search_terms_property_test.txt  al_built_in_functions.txt  allow_in_customizations_case_test.txt  allow_in_customizations_property_test.txt  allow_in_customizations_table_test.txt  analysisviews_section.txt  analysisviews_section_test.txt  api_group_publisher_properties_test.txt  api_page_properties_test.txt  api_version_multi_value_test.txt  area_prompting_test.txt  area_sections_action_test.txt  area_tooltip_property_test.txt  area_types_comprehensive_test.txt  array_indexing.txt  array_indexing_simple.txt  array_types.txt  asserterror_assignment_test.txt  asserterror_statement_test.txt  attribute_pragma_procedures_test.txt  attribute_preproc_procedure.txt  auto_format_expression_test.txt  auto_format_type_extended_test.txt  basic_page_triggers.txt  begin_identifier_conflict.txt  biginteger_literal_test.txt  blob_subtype_comprehensive_test.txt  blob_subtype_test.txt  bom_character_support_test.txt  (+522 more)
test/disabled/: built_in_functions.txt  complexIdentifiers.txt  known_limitation_trigger_preprocessor_complex.txt
test/indents/: HEADLESS_TEST_RESULTS.md
test_minimal/: grammar.json  node-types.json  parser.c
tools/: tree-harness.sh
tools/keyword-sync/: compare_keywords.py  compare_properties.py  compare_triggers.py  config.py  extract_grammar_keywords.py  extract_snippets.py  extract_vscode_keywords.py  generate_full_report.py  generate_report.py  run_all.py
v2/: grammar.js  package.json  validate.sh
v2/queries/: highlights.scm  indents.scm  locals.scm  tags.scm
v2/src/: grammar.json  node-types.json  scanner.c
(+516 files in other folders)
