[package]
name = "tree-sitter-al"
description = "AL for Business Central"
version = "0.1.0"
authors = ["Torben Leth <sshadows@sshadows.dk>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "al"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/sshadows/tree-sitter-al"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.1.22"

[dev-dependencies]
tree-sitter = "0.24.3"
