[package]
name = "tree-sitter-al"
description = "AL for Business Central"
version = "2.4.0"
authors = ["Torben Leth <sshadows@sshadows.dk>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "al"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/sshadows/tree-sitter-al"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/highlights.scm",
  "queries/locals.scm",
  "queries/tags.scm",
  "queries/folds.scm",
  "queries/indents.scm",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.1.22"

[dev-dependencies]
tree-sitter = "0.25"
