[build-system]
requires = ["setuptools>=62.4.0", "setuptools-scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-al"
description = "AL for Business Central"
dynamic = ["version"]
keywords = ["incremental", "parsing", "tree-sitter", "al"]
classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
authors = [{ name = "Torben Leth", email = "sshadows@sshadows.dk" }]
requires-python = ">=3.12"
license.text = "MIT"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/sshadows/tree-sitter-al"

[project.optional-dependencies]
core = ["tree-sitter~=0.24"]

[tool.setuptools-scm]
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"

[tool.cibuildwheel]
build = "cp312-*"
build-frontend = "build"
